--- a/nginx/common/index.html
+++ b/nginx/common/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>µFrontends</title>
+    <script type="text/javascript" src="todo/client.js"></script>
   </head>
   <body>
-    <!-- page content -->
+    <todo-list></todo-list>
   </body>
 </html>
