todo-list skeleton (not really but shows how to do it)

--- a/nginx/common/index.html
+++ b/nginx/common/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body>
-    <todo-list></todo-list>
+    <todo-list><!--#include virtual="todo/skeletons/todo-list.html" --></todo-list>
     <nav>
       <a href="javascript:newsNavigateTo('cover')">News Cover</a>
       <a href="javascript:newsNavigateTo('list')">News List</a>
