RegisterAsCustomElement, .net 6, Docker support

--- a/interest/frontend/frontend/wwwroot/index.html
+++ b/interest/frontend/frontend/wwwroot/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="app">Loading...</div>
+    <script src="http://localhost:5000/BlazorCustomElements.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
