--- a/nginx/common/index.html
+++ b/nginx/common/index.html
@@ -5,6 +5,10 @@
     <title>µFrontends</title>
     <script type="text/javascript" src="todo/client.js"></script>
     <script type="text/javascript" src="news/news.min.js"></script>
+    
+    <base href="~/" />
+    <script type="text/javascript" src="blazor-custom-elements/BlazorCustomElements.js"></script>
+    <script type="text/javascript" src="interest/_framework/blazor.webassembly.js"></script>
 
     <script>
       function newsNavigateTo(component) {
