--- a/interest/frontend/frontend/wwwroot/index.html
+++ b/interest/frontend/frontend/wwwroot/index.html
@@ -12,6 +12,8 @@
     <div id="app">Loading...</div>
     <script src="http://localhost:5000/BlazorCustomElements.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <interest-list></interest-list>
 </body>
 
 </html>
